syntax = "proto3";

// Go 패키지 경로 설정
option go_package = "github.com/mail-cote/go-server/member-service/member";

package member;

// 회원 정보 메시지
message Member {
  string email = 1;        // 이메일
  string level = 2;        // 난이도
  string password = 3;     // 비밀번호
}


// 요청 및 응답 메시지
message CreateMemberRequest {
  Member member = 1;
}

message UpdateMemberRequest {
  int32 member_id = 1;
  string level = 2;       // 새 난이도
  string password = 3;    // 새 비밀번호
  string old_password = 4; // 기존 비밀번호  --> 비밀번호 대조를 위함!
}

message DeleteMemberRequest {
  int32 member_id = 1;
  string old_password = 2; // 기존 비밀번호
}

message CreateMemberResponse {
  string message = 1;
}

message UpdateMemberResponse {
  string message = 1;
}

message DeleteMemberResponse {
  string message = 1;
}

// 이메일로 회원 ID 조회
message GetMemberByEmailRequest {
  string email = 1;
}

message GetMemberByEmailResponse {
  int32 member_id = 1;
}

// Member Service 정의
service MemberService {
  rpc CreateMember (CreateMemberRequest) returns (CreateMemberResponse);
  rpc UpdateMember (UpdateMemberRequest) returns (UpdateMemberResponse);
  rpc DeleteMember (DeleteMemberRequest) returns (DeleteMemberResponse);  
  rpc GetMemberByEmail (GetMemberByEmailRequest) returns (GetMemberByEmailResponse);
}